objects/Vendor_Request__c/Vendor_Request__c.object-meta.xml
<CustomObject>
    <label>Vendor Request</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>