objects/Vendor_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Request</relationshipLabel>
    <relationshipName>Vendor_Request</relationshipName>
    <type>Lookup</type>
</CustomField>