objects/Vendor_Request__c/fields/ACVID__c.field-meta.xml
<CustomField>
    <fullName>ACVID__c</fullName>
    <label>ACV NAV Vendor No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>