objects/Vendor_Request__c/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <label>Cycle Chem NAV Vendor No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>