objects/Vendor_Request__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Vendor Request (Payment Term)</relationshipLabel>
    <relationshipName>Vendor_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>