objects/Vendor_Request__c/fields/Payment_Term_CCID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_CCID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term CCID</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Vendor Request</relationshipLabel>
    <relationshipName>Vendor_Request</relationshipName>
    <type>Lookup</type>
</CustomField>