objects/Vendor_Request__c/fields/Remitance_Address__c.field-meta.xml
<CustomField>
    <fullName>Remitance_Address__c</fullName>
    <label>Remittance Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>