objects/Vendor_Request__c/fields/Remittance_City__c.field-meta.xml
<CustomField>
    <fullName>Remittance_City__c</fullName>
    <label>Remittance City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>