objects/Vendor_Request__c/fields/Remittance_Country__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Country__c</fullName>
    <label>Remittance Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>