objects/Vendor_Request__c/fields/Remittance_State__c.field-meta.xml
<CustomField>
    <fullName>Remittance_State__c</fullName>
    <label>Remittance State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>