objects/Vendor_Request__c/fields/Remittance_Zip__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Zip__c</fullName>
    <label>Remittance Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>