objects/Vendor_Request__c/fields/Repairs_For_Trucks_26000__c.field-meta.xml
<CustomField>
    <fullName>Repairs_For_Trucks_26000__c</fullName>
    <label>Repairs For Trucks 26000&lt;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>