objects/Vendor_Request__c/fields/Reseller_Certificate_Required__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Certificate_Required__c</fullName>
    <label>Reseller Certificate Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>