objects/Vendor_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchasing Approved</fullName>
            </value>
            <value>
                <fullName>Account Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending Purchasing Approval</fullName>
            </value>
            <value>
                <fullName>Pending Accounting Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>