objects/Vendor_Request__c/fields/Subsidiary_Company_2__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Subsidiary_Company__c.Id</field>
            <operation>equals</operation>
            <value>a07f4000001oako</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Vendor Request (Subsidiary Company 2)</relationshipLabel>
    <relationshipName>Vendor_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>