objects/Vendor_Request__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Subsidiary_Company__c.Name</field>
            <operation>equals</operation>
            <value>1-ACV ENVIRO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Vendor Request</relationshipLabel>
    <relationshipName>Vendor_Request</relationshipName>
    <type>Lookup</type>
</CustomField>