objects/Vendor_Request__c/fields/Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Number__c</fullName>
    <label>Tax ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>