objects/Vendor_Request__c/fields/Type_of_Service_Goods__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service_Goods__c</fullName>
    <label>Type of Service/Goods</label>
    <type>TextArea</type>
</CustomField>