objects/Vendor_Request__c/fields/Vendor_Require_a_Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Require_a_Credit_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Require a Credit Application</label>
    <type>Checkbox</type>
</CustomField>