objects/Vendor_Request__c/fields/w9__c.field-meta.xml
<CustomField>
    <fullName>w9__c</fullName>
    <label>W9</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>