objects/Vendor_Request__c/listViews/Vendor_Acc_Department_Vendor_Request.listView-meta.xml
<ListView>
    <fullName>Vendor_Acc_Department_Vendor_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Accounting Department</label>
    <queue>Vendor_Acc_Department</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>