objects/Vendor_Request__c/listViews/Vendor_Purchasing_Vendor_Request.listView-meta.xml
<ListView>
    <fullName>Vendor_Purchasing_Vendor_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Purchasing Department</label>
    <queue>Vendor_Purchasing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>